Changed Button to accept links; Fixed img on project-card; ArticleCard on mobile without margins

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -226,10 +226,11 @@
 /*#region GENERAL STYLES */
 
 html{
-  font-family: 'Source Code Pro', 'Space Mono', 'Roboto Mono', 'Oxygen Mono', 'Oxygen', 'sans-serif';
-  /* font-family: 'Space Mono', 'Roboto Mono', 'Source Code Pro', 'Oxygen Mono', 'monospace'; */
+  /* font-family: 'Source Code Pro', 'Space Mono', 'Roboto Mono', 'Oxygen Mono', 'Oxygen', 'sans-serif'; */
+  font-family: 'Space Mono', 'Roboto Mono', 'Source Code Pro', 'Oxygen Mono', 'monospace';
   font-size: 16px;
   color: var(--color-text__default);
+  letter-spacing: 0.035rem;
 }
 
 body{
@@ -251,7 +252,7 @@ h1.page-title{
 }
 
 h2.underline-title{
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-weight: bold;
   margin: 1em 0;
   position: relative;
